# artifacts/api-server/src/types/session.ts
@@ -2,6 +2,10 @@ import "express-session";
 
 declare module "express-session" {
   interface SessionData {
-    userId: number;
+    userId: string;
+    userEmail: string;
+    userName: string;
+    oauthState?: string;
+    postLoginRedirect?: string;
   }
 }
